@@ -3,8 +3,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
                  (well, close to it anyhow)
 ---------------------------------------------------------------------------
 
-- $r->current_callback broken for PerlHandler
-
 - enable PerlRestartHandler w/ EVERYTHING=1
 
 - solaris Perl Configure adds a space before -R in ccdlflags, see
